--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "add-users",
   "version": "0.1.0",
-  "homepage": "https://alinashatalova.github.io/add-user/",
+  "homepage": "https://alinashatalova.github.io/add-users/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
